<resources>
    <string name="app_name">Movie DB</string>
    <string name="label_detail">Detail</string>
    <string name="label_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_vote">Vote</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_genres">Genre</string>
    <string name="label_overview">Overview</string>
    <string name="label_production_details">Production Details</string>
    <string name="label_belongs">Belongs</string>
    <string name="label_budget">Budget</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_companies">Companies</string>
    <string name="label_countries">Countries</string>
</resources>
